--- a/vars/global.yaml
+++ b/vars/global.yaml
@@ -318,6 +318,10 @@ monitor:
             gnetId: 2842
             revision: 14
             datasource: Prometheus
+          alerts:
+            gnetId: 18458
+            revision: 1
+            datasource: Prometheus
 
   node_exporter:
     version: 1.3.0
