--- a/roles/prometheus/defaults/main/prometheus.yml
+++ b/roles/prometheus/defaults/main/prometheus.yml
@@ -37,7 +37,7 @@ __config_prometheus:
         target_label: __metrics_path__
         replacement: /api/v1/nodes/$1/proxy/metrics
       - action: labeldrop
-        regex: ^(cpu_|host_|hyperv_|kubevirt_|beta_).*
+        regex: ^(cpu_|host_model_|hyperv_).*
 
   - job_name: 'kubernetes-nodes-cadvisor'
     scheme: https
@@ -57,7 +57,7 @@ __config_prometheus:
         target_label: __metrics_path__
         replacement: /api/v1/nodes/$1/proxy/metrics/cadvisor
       - action: labeldrop
-        regex: ^(cpu_|host_|hyperv_|kubevirt_|beta_).*
+        regex: ^(cpu_|host_model_|hyperv_).*
 
   #service must have the annotation: prometheus.io/scrape: "true"
   #if there is path(starting with /), add the annotation: prometheus.io/path: <path>
