--- a/roles/prometheus/defaults/main/alerting_rules.yml
+++ b/roles/prometheus/defaults/main/alerting_rules.yml
@@ -421,7 +421,7 @@ __config_alerting_rules:
 
     - alert: KubernetesVolumeFullInOneDay
       expr: predict_linear(kubelet_volume_stats_available_bytes[6h], 1 * 24 * 3600) < 0
-      for: 0m
+      for: 1h
       labels:
         severity: critical
       annotations:
