--- a/playbooks/push_images.yaml
+++ b/playbooks/push_images.yaml
@@ -2,25 +2,25 @@
   gather_facts: True
   become: True
   vars:
-    target_registry: "10.10.10.250"
-    username: "admin"
-    password: "Harbor12345"
+    _target_registry: "10.10.10.250"
+    _username: "admin"
+    _password: "Harbor12345"
 
     #匹配的镜像，会用${registry_prefix} 替换 其地址
     #没有匹配这里的镜像，都会在镜像前面加上${registry_prefix}
     #use | to match multiple registries
-    prefix_replace_pattern: ""
+    _prefix_replace_pattern: ""
 
     #匹配的镜像，会用${target_registry} 替换 其地址
     #没有匹配这里的镜像，都会在镜像前面加上${registry_prefix}
     #use | to match multiple registries
-    address_replace_pattern: ""
+    _address_replace_pattern: ""
     
     #其余镜像都会在前面加上 ${registry_prefix}
 
   tasks:
   - name: login registry
-    shell: docker login {{ target_registry }} -u {{ username }} -p {{ password }}
+    shell: docker login {{ _target_registry }} -u {{ _username }} -p {{ _password }}
   - name: copy scripts
     template:
       src: ../scripts/tag_push_images.sh.j2
@@ -28,7 +28,7 @@
       mode: 0755
   - name: exec scripts
     shell: /tmp/tag_push_images.sh
-    register: result
+    register: __result
   - name: output errors
     debug:
-      msg: "{{ result.stderr_lines }}"
+      msg: "{{ __result.stderr_lines }}"
